sample-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-buy
  labels:
    name: simple-buy
    app: simple-buy
    istio-injection: enabled
